--- a/BlackMagicAPI.csproj
+++ b/BlackMagicAPI.csproj
@@ -7,6 +7,7 @@
 		<OutputType>Library</OutputType>
 		<langVersion>preview</langVersion>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<Version>3.0.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
